load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

filegroup(
    name = "all_srcs",
    srcs = glob(
        include = ["**"],
        exclude = ["*.bazel"],
    ),
)

LIB_NAME = "libsecp256k1"

configure_make(
    name = "libsecp256k1",
    configure_in_place = True,
    autogen = True,
    lib_name = LIB_NAME,
    lib_source = ":all_srcs",
    visibility = ["//visibility:public"],
)
